:zap: !ObjectUtils.isEmpty